<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/scanner"
        android:layout_width="159dp"
        android:layout_height="96dp"
        android:layout_marginTop="92dp"
        android:text="@string/scanner"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnTakePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="196dp"
        android:layout_height="226dp"
        android:saveEnabled="true"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LogOut" />


</LinearLayout>